test/typecheck/errors/builtin-method-no-call.boa
o: output sum of int;

if (clear)
	o << 1;
